<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/accueil_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:layout_marginTop="15dp"

        android:textSize="40sp" />

    <TextView
        android:id="@+id/accueil_sous_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/accueil_sous_titre"
        android:layout_marginTop="10dp"
        android:layout_below="@id/accueil_titre"

        android:textSize="20sp" />


    <Button
        android:id="@+id/accueil_bouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/accueil_bouton"
        android:layout_marginTop="40dp"
        android:layout_below="@id/accueil_sous_titre"
        android:onClick="onButtonQuizClicked"

        android:textSize="20sp" />

</RelativeLayout>